--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,19 +12,19 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form>
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
-
-
+                <h5>CS50</h5>
+                <form method="post" action="{% url 'index' %}">
+                {% csrf_token %}
+                    {{form.item}}
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    <a href="{% url 'create' %}" ></a> Create New Page
+                    <a href="{% url 'create' %}" >Create New Page</a>
                 </div>
                 <div>
-                   <a href="{% url 'random' %}"></a> Random Page
+                   <a href="{% url 'random' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
